Remove --enable-preview flags