@@ -24,7 +24,6 @@
 
     <properties>
         <automatic.module.name>org.jline.terminal</automatic.module.name>
-        <javadocOptions>--enable-preview --release 21</javadocOptions>
     </properties>
 
     <dependencies>
